security: use 'null' origin instead of wildcard for srcdoc iframe
Change postMessage to inner srcdoc iframe from '*' to 'null' since
srcdoc iframes always have null origin. More specific than wildcard.

--- a/ui/desktop/static/mcp-ui-proxy.html
+++ b/ui/desktop/static/mcp-ui-proxy.html
@@ -113,7 +113,7 @@
               if (inner && inner.contentWindow) {
                 inner
                   .contentWindow
-                  .postMessage(event.data, '*');
+                  .postMessage(event.data, 'null');
               }
             }
           } else if (event.source === inner.contentWindow) {
