fix: add null check for iframe contentWindow in MCP-UI proxy
Prevent potential null reference errors when relaying messages to external
URL iframes by checking if contentWindow exists before calling postMessage.

--- a/ui/desktop/static/mcp-ui-proxy.html
+++ b/ui/desktop/static/mcp-ui-proxy.html
@@ -118,9 +118,13 @@
           window.addEventListener('message', (event) => {
             if (event.source === window.parent) {
               // listen for messages from the parent and send them to the iframe
-              inner
-                .contentWindow
-                .postMessage(event.data, urlOrigin);
+              if (inner.contentWindow) {
+                inner
+                  .contentWindow
+                  .postMessage(event.data, urlOrigin);
+              } else {
+                console.warn('[MCP-UI Proxy] iframe contentWindow is not available; message not sent');
+              }
             } else if (event.source === inner.contentWindow) {
               // listen for messages from the iframe and send them to the parent
               window
