--- a/ui/desktop/index.html
+++ b/ui/desktop/index.html
@@ -83,8 +83,8 @@
               if (t < 0) t += 1;
               if (t > 1) t -= 1;
               if (t < 1/6) return p + (q - p) * 6 * t; // Hue in red-yellow range
-              if (t < 1/2) return q; // Hue in yellow-green range
-              if (t < 2/3) return p + (q - p) * (2/3 - t) * 6; // Hue in green-blue range
+              if (t < 1/2) return q; // Hue in yellow-cyan range
+              if (t < 2/3) return p + (q - p) * (2/3 - t) * 6; // Hue in cyan-blue range
               return p;
             };
             const q = l < 0.5 ? l * (1 + s) : l + s - l * s;
